# growth-content-essays

./: .gitignore  CLAUDE.md  README.md
samples/: essay_a16z_big_ideas_2026.md  essay_maven_agentic_workflows.md  essay_on_taste.md  essay_v1_boris_cherny.md
tools/: transcribe_groq.py  transcribe_maven.py
tools/ytsearch/: README.md  main.py  pyproject.toml  ytsearch.py
